# haiway

./: .pymarkdown.json  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  constraints  llms.txt  mkdocs.yml  package-lock.json  pydoc-markdown.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md
docs/advanced/: index.md  performance.md  troubleshooting.md
docs/api/: context.md  core.md  helpers.md  index.md  state.md  types.md
docs/examples/: fastapi-integration.md  index.md
docs/features/: caching.md  context-presets.md  context-variables.md  event-bus.md  file-access.md  http-client.md  opentelemetry.md  postgres.md  rabbitmq.md  state-methods.md
docs/getting-started/: first-steps.md  functional-programming-guide.md  index.md  installation.md  quickstart.md
docs/guides/: architecture.md  async-patterns.md  concurrent.md  configuration.md  context-system.md  functionalities.md  functionality-patterns.md  helpers.md  index.md  package-organization.md  packages.md  state-management.md  state.md  testing.md  types.md  utilities.md
docs/stylesheets/: extra.css
examples/fastAPI/: .dockerignore  Dockerfile  Makefile  README.md  constraints  docker-compose.yml  pyproject.toml
examples/fastAPI/config/: .env.example  unit.json
examples/fastAPI/src/features/todos/: __init__.py  calls.py  state.py  types.py  user_tasks.py
examples/fastAPI/src/integrations/postgres/: __init__.py  asyncpg.py  client.py  connection.py  session.py  state.py  types.py
examples/fastAPI/src/migrations/postgres/: migration_0.py
examples/fastAPI/src/server/: __init__.py  __main__.py  application.py  config.py
examples/fastAPI/src/server/middlewares/: __init__.py  context.py
examples/fastAPI/src/server/routes/: __init__.py  technical.py  todos.py
examples/fastAPI/src/solutions/user_tasks/: __init__.py  calls.py  postgres.py  state.py  types.py
guidelines/: functionalities.md  llms.txt  packages.md
src/haiway/: __init__.py  __main__.py
src/haiway/attributes/: __init__.py  annotations.py  attribute.py  coding.py  function.py  path.py  requirement.py  specification.py  state.py  validation.py
src/haiway/context/: __init__.py  access.py  dependencies.py  disposables.py  events.py  identifier.py  logging.py  metrics.py  observability.py  presets.py  scope.py  state.py  tasks.py  types.py  variables.py
src/haiway/files/: __init__.py  config.py  local.py  memory.py  state.py  types.py
src/haiway/helpers/: __init__.py  asynchronous.py  asynchrony.py  cache.py  cached.py  caching.py  concurrent.py  configuration.py  disposables.py  files.py  http_client.py  message_queue.py  metrics.py  observability.py  retries.py  retry.py  statemethods.py  throttling.py  timeout.py  timeouted.py  timeouting.py  tracing.py
src/haiway/httpx/: __init__.py  client.py
src/haiway/opentelemetry/: __init__.py  metrics.py  observability.py
src/haiway/postgres/: __init__.py  client.py  config.py  configuration.py  state.py  types.py
src/haiway/rabbitmq/: __init__.py  client.py  config.py  connection.py  state.py  types.py
src/haiway/state/: __init__.py  attributes.py  immutable.py  path.py  requirement.py  structure.py  validation.py
src/haiway/types/: __init__.py  alias.py  basic.py  default.py  description.py  frozen.py  immutable.py  map.py  meta.py  missing.py  specification.py
src/haiway/utils/: __init__.py  always.py  collections.py  env.py  formatting.py  freezing.py  immutable.py  logs.py  mappings.py  metadata.py  mimic.py  noop.py  pagination.py  queue.py  sequences.py  stream.py
tests/: conftest.py  test_alias_resolution.py  test_async_queue.py  test_async_stream.py  test_attribute_path.py  test_attribute_requirement.py  test_auto_retry.py  test_background_scope.py  test_background_tasks.py  test_cache.py  test_concurrently.py  test_configuration.py  test_context.py  test_context_presets.py  test_default.py  test_disposables.py  test_events.py  test_execute_concurrently.py  test_files.py  test_formatting.py  test_function.py  test_http_client.py  test_immutable.py  test_map.py  test_metadata.py  test_opentelemetry.py  test_optional_extras_guard.py  test_pagination.py  test_postgres_connection_pool.py  test_postgres_migration_validation.py  test_postgres_migrations_locking.py  test_postgres_row.py  test_process_concurrently.py  test_specifications.py  test_state.py  test_state_attributes.py  test_state_typing.py  test_state_validation.py  test_statemethod.py  test_stream_concurrently.py  (+4 more)
tests/opentelemetry/: test_observability.py
