[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[project]
name = "haiway"
description = "Framework for dependency injection and state management within structured concurrency model."
version = "0.31.3"
readme = "README.md"
maintainers = [
  { name = "Kacper Kaliński", email = "kacper.kalinski@miquido.com" },
]
requires-python = ">=3.12"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Typing :: Typed",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Homepage = "https://miquido.com"
Repository = "https://github.com/miquido/haiway.git"

[project.optional-dependencies]
opentelemetry = [
  "opentelemetry-api~=1.33",
  "opentelemetry-sdk~=1.33",
  "opentelemetry-exporter-otlp-proto-grpc~=1.33",
]
httpx = ["httpx~=0.28"]
dev = [
  "bandit~=1.8",
  "pyright~=1.1",
  "pytest~=8.3",
  "pytest-asyncio~=0.26",
  "pytest-cov~=6.1",
  "ruff~=0.12",
  "mdformat~=0.7",
  "mdformat-gfm~=0.3",
  "pymarkdownlnt~=0.9",
]
docs = ["mkdocs~=1.6", "mkdocs-material~=9.5", "mkdocstrings[python]~=0.27"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", ".git", ".cache"]
lint.select = ["E", "F", "A", "I", "B", "PL", "W", "C", "RUF", "UP"]
lint.ignore = ["A005"]

[tool.ruff.lint.pylint]
max-args = 12

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]
"./tests/*.py" = ["PLR2004"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["./src"]
exclude = ["**/node_modules", "**/__pycache__"]
ignore = []
stubPath = "./stubs"
reportMissingImports = true
reportMissingTypeStubs = false
userFileIndexingLimit = -1
useLibraryCodeForTypes = true

[tool.pyright.analysis]
diagnosticMode = "workspace"
typeCheckingMode = "strict"

[tool.uv-build]
packages = [{ include = "haiway", from = "src" }]

[tool.uv-build.sdist]
exclude = [
  "site",
  "docs",
  "tests",
  ".github",
  "stubs",
  "config",
  "llms.txt",
  ".vscode",
  ".claude",
  ".codex",
  ".zed",
  ".venv",
  "**/.DS_Store",
  "**/__pycache__",
  ".ruff_cache",
  ".pytest_cache",
  ".mypy_cache",
]

[tool.uv-build.wheel]
exclude = ["**/.DS_Store", "**/__pycache__", "**/*.pyc"]
